--- a/JRTP_User_Managment/pom.xml
+++ b/JRTP_User_Managment/pom.xml
@@ -16,6 +16,9 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.host.url>http://13.49.74.132:9000/</sonar.host.url>
+		<sonar.login>admin</sonar.login>
+		<sonar.password>anshika</sonar.password>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -27,6 +30,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
